# amb

./: .gitignore  CHANGELOG  CHANGELOG.txt  CMakeLists.txt  TODO.txt  cloc.py
cmake/modules/: FindZMQ.cmake
external_projects/gtest/: CMakeLists.txt
gui/AlmostManualBot/: AlmostManualBot.pro  AlmostManualBot.pro.user.2.7pre1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sources/: CMakeLists.txt
sources/inc/: Bot.hpp  BotCore.hpp  ConfigFromUiGenerator.hpp  Configs.hpp  ModuleId.hpp  ModulesManager.hpp  ScreenCapturer.hpp  Simulator.hpp  TibiaFinder.hpp  TibiaReader.hpp  TibiaScreenReader.hpp  utils.hpp
sources/inc/async/: AsyncTask.hpp  AsyncTasksManager.hpp
sources/inc/capture/: CaptureMode.hpp  ConstPixels.hpp  CoveredWindowCapturer.hpp  DeadCreatureWindowFinder.hpp  FrameCapturer.hpp  ItemCapturer.hpp  ItemsWindowReader.hpp  NotCoveredWindowCapturer.hpp  WindowCapturer.hpp
sources/inc/cexpr/: algorithm.hpp  template.hpp
sources/inc/cexpr/crypto/: crypto.hpp
sources/inc/client/: EqItems.hpp  Hotkey.hpp  TibiaClientRectCornersObserver.hpp  TibiaClientType.hpp  TibiaClientWindowInfo.hpp  TibiaClientWindowRectObserver.hpp
sources/inc/client/finder/: GraphicEqFinder.hpp  HealthManaFinder.hpp
sources/inc/client/reader/: GraphicEqReader.hpp  HealthManaReader.hpp  IEqReader.hpp  TibiaClientMemoryReader.hpp  TibiaClientReader.hpp
sources/inc/client/window/: TibiaItemsWindow.hpp  TibiaWindow.h  TibiaWindow.hpp
sources/inc/config/: ConfigFileManager.hpp  GlobalConfig.hpp
sources/inc/config/layout/: PixelsLayoutConfig.hpp
sources/inc/config/module/: AdvancedSettingsConfig.hpp  HealerConfig.hpp  LooterConfig.hpp  MlvlConfig.hpp  MouseHotkeysConfig.hpp
sources/inc/db/: Containers.hpp  Database.hpp  Items.hpp
sources/inc/graphics/: Image.hpp
sources/inc/hash/: Hash.hpp
sources/inc/log/: ConditionalLogger.hpp  ILogger.hpp  ImageConditionalLogger.hpp  ImageLogger.hpp  ItemLogger.hpp  Logger.hpp  RectLogger.hpp  log.hpp
sources/inc/log/condition/: ILoggerCondition.hpp  ImageLogOnceCondition.hpp  ImageLogUniqueCondition.hpp  LogDifferentThanLastCondition.hpp  LoggerCondition.hpp
sources/inc/log/details/: Logger.hpp
sources/inc/memory/: Addresses.hpp  ProcessMemoryReader.hpp
sources/inc/module/: Module.hpp  ModuleCore.hpp  ModuleId.hpp  ModulesFactory.hpp
sources/inc/module/modules/: Healer.hpp  LooterModule.hpp  MlvlModule.hpp
sources/inc/module/ui_remover/: LooterUiRemover.hpp
sources/inc/monitor/mouse/: IMouseEventPublisher.hpp  IMouseEventSubscriber.hpp  IMouseMonitor.hpp  MouseEventPublisher.hpp  MouseMonitor.hpp  MouseMonitorFactory.hpp  SingleMouseEventMonitor.hpp
sources/inc/mouse/: MouseEvent.hpp  MouseKey.hpp
sources/inc/screen/: ScreenResolutions.hpp
sources/inc/security/debug/: DebugModeChecker.hpp  DebugModeCheckerFactory.hpp
sources/inc/simulate/: MouseSimulator.hpp
sources/inc/ui/: UiControls.hpp
sources/inc/ui/controls/: Table.hpp
sources/inc/ui/updaters/: AdvancedSettingsUiUpdater.hpp  HealerUiUpdater.hpp  LooterUiUpdater.hpp  MainWindowTitleUpdater.hpp  MlvlUiUpdater.hpp  TibiaClientsComboboxUpdater.hpp  UiUpdater.hpp
sources/inc/utils/: ForwardDeclarePos.hpp  Observable.hpp  PropertyTreeBuilder.hpp  SimpleToStringConverter.hpp  Structs.hpp  ThreadWorker.hpp  ToString.hpp  TokensProvider.hpp  log.hpp
sources/src/: Bot.cpp  BotCore.cpp  ConfigFromUiGenerator.cpp  Healer.cpp  ModuleCore.cpp  ModulesManager.cpp  Simulator.cpp  TibiaFinder.cpp  utils.cpp
sources/src/async/: AsyncTask.cpp  AsyncTasksManager.cpp
sources/src/capture/: DeadCreatureWindowFinder.cpp  FrameCapturer.cpp  ItemCapturer.cpp  ItemsWindowReader.cpp
sources/src/client/: Hotkey.cpp  TibiaClientType.cpp  TibiaClientWindowRectObserver.cpp
sources/src/config/: ConfigFileManager.cpp  GlobalConfig.cpp
sources/src/db/: Containers.cpp
sources/src/hash/: Hash.cpp
sources/src/log/: ImageConditionalLogger.cpp  ImageLogger.cpp  ItemLogger.cpp
sources/src/memory/: ProcessMemoryReader.cpp
sources/src/module/: Module.cpp  ModuleCore.cpp  ModulesFactory.cpp
sources/src/mouse/: MouseEvent.cpp
sources/src/simulate/: MouseSimulator.cpp
sources/src/utils/: ThreadWorker.cpp
src/: Addresses.cpp  Addresses.hpp  Bot.cpp  Bot.hpp  BotCore.cpp  BotCore.hpp  ConfigFromUiGenerator.cpp  ConfigFromUiGenerator.hpp  Configs.hpp  HealRule.cpp  HealRule.hpp  Healer.cpp  Healer.hpp  HealerRulesTable.cpp  HealerRulesTable.hpp  Module.cpp  Module.hpp  ModuleCore.hpp  ModuleId.hpp  ModuleView.hpp  ModulesFactory.hpp  ModulesManager.cpp  ModulesManager.hpp  ProcessMemoryReader.hpp  Simulator.cpp  Simulator.hpp  TibiaFinder.cpp  TibiaFinder.hpp  TibiaStuffReader.cpp  TibiaStuffReader.hpp  TibiaWindowHwndFinder.hpp  ViewConfig.hpp  main.cpp  screencapturer.hpp  tibiareader.hpp  tibiascreenreader.hpp  utils.cpp  utils.hpp
src/capture/: CaptureMode.hpp  DeadCreatureWindowFinder.cpp  DeadCreatureWindowFinder.hpp  ItemsWindowReader.hpp  NotCoveredWindowCapturer.hpp  WindowCapturer.hpp
src/cexpr/: array.hpp  crypto.hpp
src/cexpr/algorithm/: algorithm.hpp
src/cexpr/array/: array.hpp
src/cexpr/crypto/: crypto.hpp
src/cexpr/template/: template.hpp
src/client/: TibiaClientType.cpp  TibiaClientType.hpp
src/config/layout/: HealthHeartConfig.hpp
src/db/: Database.hpp  Items.hpp
src/graphics/: Image.hpp
src/module/: Module.hpp
src/ui/: UiControls.hpp
src/ui/controls/: Table.hpp
src/ui/modules/looter/: Items.cpp  (+5 more)
src/ui/updaters/: AdvancedSettingsUiUpdater.hpp  HealerUiUpdater.hpp  UiUpdater.hpp
src/utils/: PropertyTreeBuilder.hpp  Structs.hpp  ToString.hpp
src/utils/traits/: traits.hpp
tests/: CMakeLists.txt
tests/config/: CMakeLists.txt  ConfigFileManagerTests.cpp
tests/hash/: CMakeLists.txt  HashTests.cpp
tests/tests_related/: CMakeLists.txt
tests/tests_related/utils/: ObservatorMock.hpp
tests/ui/: CMakeLists.txt
tests/ui/modules/healer/: HealRuleTests.cpp
tests/ui/updaters/details/: MainWindowTitleBuilderTests.cpp
tests/utils/: CMakeLists.txt  ObservableTests.cpp  RelativeRectTests.cpp  Structs.cpp  StructsTests.cpp
(+98 files in other folders)
